--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Marcin S. <scatman@bu.edu>"]
 categories = ["command-line-utilities"]
-description = "Pronounced 'loch' and short for 'link out check'."
+description = "Short for 'link out check' and pronounced 'loch'."
 documentation = "https://docs.rs/loch"
 keywords = ["loch", "link", "check", "utility"]
 license = "MIT"
@@ -15,3 +15,4 @@ edition = "2018"
 [dependencies]
 clap = "2"
 curl = "0.4"
+ignore = "0.4"
